src/modules/base/kanban/kanban.css
.avonni-kanban__container {
    position: relative;
    overflow-x: scroll;

    height: 100%;
}

.avonni-kanban__field_read_only .avonni-kanban__summarize_wrapper {
    cursor: default;
}

.avonni-kanban__path_item {
    min-width: var(--avonni-kanban-column-min-width, 14em);
    max-width: calc(var(--avonni-kanban-column-max-width, 22.5em) - 8px);
}

.slds-path__nav {
    pointer-events: none;
    height: 100%;
    max-height: 100%;
}

.avonni-kanban__path_container {
    overflow: visible;
    height: 100%;
    max-height: 100%;
}

.avonni-kanban__field_container {
    position: relative;
    max-height: calc(100% - 15px);
    margin-top: 10px;
    right: 0;
    left: 0;
    display: flex;
    width: 100%;
}

.avonni-kanban__variant_base .avonni-kanban__field_container {
    height: fit-content;
}

.avonni-kanban__variant_path .avonni-kanban__field_container {
    height: calc(100% - 45px);
}

.avonni-kanban__variant_path .avonni-kanban__field {
    height: calc(100% - 15px);
    display: flex;
    flex-direction: column;
}

.avonni-kanban__tiles_container {
    overflow-y: scroll;
    overflow-x: hidden;
}

.avonni-kanban__variant_base .avonni-kanban__tiles_container {
    height: fit-content;
}

.avonni-kanban__header_action {
    position: absolute;
    top: 10px;
    right: 10px;
}

.avonni-kanban__summarize_wrapper {
    min-height: 30px;
    height: 100%;
    z-index: 2;
}

.avonni-kanban__variant_base .avonni-kanban__group_header {
    user-select: none;
    cursor: grab;
}

.avonni-kanban__field {
    position: relative;
    width: 100%;
    min-width: var(--avonni-kanban-column-min-width, 14em);
    max-width: var(--avonni-kanban-column-max-width, 22.5em);
    max-height: calc(100% - 15px);

    border-right: 1px solid #c9c7c5;
    padding: 5px 0;
}

.avonni-kanban__field:first-of-type {
    border-left: 1px solid #c9c7c5;
    height: 100%;
    max-height: 100%;
}

.avonni-kanban__tile {
    margin: 5px;
    background-color: #ffffff;
    -webkit-user-select: none;
    -moz-user-select: none;

    -ms-user-select: none;
    position: relative;
    user-select: none;
    z-index: 1;
}

.avonni-kanban__actions_menu {
    position: relative;
}

.avonni-kanban__tile:hover:not(.avonni-kanban__dragged):not(.avonni-kanban__tile_read_only) {
    background-color: #f7f7f7;
    cursor: grab;
    z-index: 9999;
    position: relative;
}

.avonni-kanban__variant_base .slds-path__track {
    display: none;
}

.avonni-kanban__variant_base .avonni-kanban__field {
    border-radius: 0.25rem;
    background-color: rgb(252, 252, 252);
    margin: 5px;
    border: 1px solid #dbdbdb;
}

.avonni-kanban__variant_base .avonni-kanban__summarize_wrapper {
    display: flex;
    text-align: left;
    flex-direction: column;
    margin-left: var(--lwc-spacingXSmall, 0.8rem);
}

.avonni-kanban__variant_base .avonni-kanban__summarize {
    text-align: left;
    font-weight: 500;
}

.avonni-kanban__variant_base .avonni-kanban__tile {
    border-bottom: 1px solid #c0c0c0;
}

.avonni-kanban__tile-title {
    font-weight: 500;
    margin: 5px 0;
}

.avonni-kanban__variant_path .avonni-kanban__tile-title {
    display: none;
}

.avonni-kanban__tile:not(.avonni-kanban__dragged) {
    z-index: 1;
}

.avonni-kanban__tile_icon {
    position: absolute;
    right: 3px;
    bottom: 3px;
}

.avonni-kanban__tile_actions {
    position: absolute;
    z-index: 99999;
    right: 3px;
    top: 3px;
}

.avonni-kanban__dragged {
    z-index: 9999;
    position: absolute;
    cursor: grabbing;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
}

.avonni-kanban__tile_dropzone,
.avonni-kanban__group_dropzone {
    position: absolute;
    background-color: rgba(0, 0, 0, 0.05);
    margin: 5px;
    border-radius: 0.25rem;
    z-index: 1;
}

.avonni-kanban__dragged::after {
    content: '';
    position: absolute;
    top: -25%;
    left: -25%;
    width: 150%;
    transform: rotate(-3deg);
    height: 150%;
}

.avonni-kanban__tile_moved {
    z-index: 1;
    position: relative;
    pointer-events: none;
}

/* .avonni-kanban__tile:last-of-type {
    margin-bottom: 135px;
} */

.avonni-kanban__footer_actions_container {
    margin: 5px 30px;
    padding-top: 10px;
}

.avonni-kanban__footer_action {
    border: none;
    background-color: transparent;
    width: 100%;
    display: flex;
    align-items: center;
    transition: background 0.1s;
    border-radius: 0.25rem;
}

.avonni-kanban__footer_action:not(:disabled):hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.avonni-kanban__footer_action > span {
    padding: 3px;
    margin: 3px;
}

.avonni-kanban__footer_action:disabled {
    opacity: 0.5;
}

.avonni-kanban__container::-webkit-scrollbar,
.avonni-kanban__tiles_container::-webkit-scrollbar {
    width: 7px;
    height: 7px;
}

/* Track */
.avonni-kanban__container::-webkit-scrollbar-track,
.avonni-kanban__tiles_container::-webkit-scrollbar-track {
    background: transparent;
}

/* Handle */
.avonni-kanban__container::-webkit-scrollbar-thumb,
.avonni-kanban__tiles_container::-webkit-scrollbar-thumb {
    background: #dbdbdb;
    border-radius: 5px;
}

/* Handle on hover */
.avonni-kanban__container::-webkit-scrollbar-thumb:hover,
.avonni-kanban__tiles_container::-webkit-scrollbar-thumb:hover {
    background: #c0c0c0;
}

.avonni-kanban__variant_base
    .avonni-kanban__field.avonni-kanban__dragged_group {
    position: relative;
    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
    z-index: 9999;
}

.avonni-kanban__field.avonni-kanban__translate_left {
    transform: translateX(calc(-100% - 10px));
}

.avonni-kanban__variant_base
    .avonni-kanban__field.avonni-kanban__translate_right {
    transform: translateX(calc(100% + 10px));
}

.avonni-kanban__variant_base
    .avonni-kanban__dragged_group
    .avonni-kanban__group_header {
    cursor: grabbing;
}

.avonni-kanban__variant_base,
.avonni-kanban__variant_path {
    height: 100%;
    max-height: 100%;
}

